--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "uuid": "^9.0.0"
+    "express": "^4.18.2",
+    "uuid": "^9.0.0",
+    "ws": "^8.18.3"
   }
-} 
+}
